--- a/coffeenie/css/index.css
+++ b/coffeenie/css/index.css
@@ -714,7 +714,7 @@ body {
 .ins_img .ins_tit {
 	color: #fff;
 	font-weight: bold;
-	font-size: 25px;
+	font-size: 2.5rem;
 	margin-bottom: 25px;
 }
 
@@ -757,7 +757,7 @@ body {
 	height: 40px;
 	display: inline-block;
 	text-align: center;
-	font-size: 14px;
+	font-size: 1.4rem;
 	font-weight: bold;
 	color: #5a87c5;
 	background-color: #fff;
@@ -767,7 +767,7 @@ body {
 
 /* 푸터 */
 #footer {
-	padding: 40px 0;
+	padding: 50px 0;
 	color: #5a87c5;
 }
 
@@ -779,6 +779,7 @@ body {
 	position: relative;
 	display: inline-block;
 	margin: 0 8px;
+	font-size: 1.4rem;
 }
 
 .foot_link li:first-child {
@@ -805,11 +806,11 @@ body {
 
 .foot_copy_info {
 	margin: 20px 0;
-	font-size: 12px;
+	font-size: 1.4rem;
 }
 
 .foot_copy {
-	font-size: 12px;
+	font-size: 1.4rem;
 }
 
 .sns_icon {
@@ -902,6 +903,13 @@ body {
 
 	.md .md_slide_btn {right: 22px;}
 	.md .md_slide .slick-dots {left: 47.5%;}
+
+	.insta .row {padding: 0 12px;}
+
+	#footer .row {padding: 0 12px;}
+	.sns_icon {right: 8px;}
+	.sns_icon a {width: 40px; height: 40px; margin: 0 2px;}
+	.foot_link li::before {top: 4px;}
 }
 
 @media (max-width: 720px) {
@@ -926,6 +934,16 @@ body {
 	.md .md_slide_btn {right: 73px;}
 	.md .md_slide .slick-dots {left: 42%;}
 	.md .md_slide_btn .btn_line {left: 49.5%;}
+
+	.insta .row {padding: 0 24px;}
+	.ins_img li {width: 33.3333%; height: 333.3333%;}
+	.ins_img li.none {display: none;}
+	.ins_img .ins_btn {width: 235px;}
+
+	#footer {padding-top: 100px;}
+	.foot_link, .foot_copy_info, .foot_copy {text-align: center;}
+	.sns_icon {width: 140px; top: -65px; left: 50%; transform: translateX(-50%);}
+	/* .sns_icon {top: 50%; left: 50%; transform: translate(-50%,-50%);} */
 }
 
 @media (max-width: 480px) {
@@ -952,4 +970,7 @@ body {
 
 	.md {height: 360px;}
 	.md .md_slide .slick-dots {left: 36%;}
+
+	.insta .row {padding: 0 8px;}
+	
 }
