--- a/coffeenie/css/reset.css
+++ b/coffeenie/css/reset.css
@@ -13,7 +13,8 @@ a {color: inherit; text-decoration: none;}
 /*a:hover {color: #2698cb;}*/
 
 /* 폰트 초기화 */
-body, input, textarea, select, button, table {font-family: 'Nanum Gothic', AppleSDGothicNeo-Regular,'Malgun Gothic','맑은 고딕',dotum,'돋움',sans-serif; color: #222; font-size: 13px; line-height: 1.5;}
+body, input, textarea, select, button, table {font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', sans-serif;
+}
 
 /* 폰트 스타일 초기화 */
 em,address {font-style: normal;}
