--- a/coffeenie/css/index.css
+++ b/coffeenie/css/index.css
@@ -750,7 +750,7 @@ body {
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0);
-	z-index: 15;
+	z-index: 14;
 }
 
 .ins_img li a:hover::before {
@@ -856,8 +856,8 @@ body {
 /* top 버튼 */
 #top_btn {
 	position: fixed;
-	bottom: 50px;
-	right: 105px;
+	bottom: 190px;
+	right: 140px;
 	width: 70px;
 	height: 120px;
 	display: none;
@@ -866,7 +866,7 @@ body {
 #top_btn a .top_btn {
 	position: absolute;
 	top: 75px;
-	right: 10px;
+	right: 0;
 	width: 50px;
 	height: 50px;
 	text-indent: -9999px;
@@ -943,7 +943,6 @@ body {
 	.foot_link li::before {top: 4px;}
 
 	#top_btn {right: 12px;}
-	#top_btn a .top_btn {right: 0;}
 }
 
 @media (max-width: 720px) {
@@ -1013,5 +1012,4 @@ body {
 	.insta .row {padding: 0 8px;}
 	
 	#top_btn {right: 8px;}
-	#top_btn a .top_btn {width: 40px; height: 40px;}
 }
