text animation edit

--- a/andbag/css/style.css
+++ b/andbag/css/style.css
@@ -118,17 +118,6 @@ html {
 	background-color: #F8F8F8;
 }
 
-/* #footer:after {
-	content: "";
-	top: -79px;
-	left: 0;
-	position: absolute;
-	width: 100%;
-	height: 80px;
-	background-color: #999;
-	z-index: -1;
-} */
-
 /* 헤더 */
 .header {
 	position: relative;
@@ -597,19 +586,30 @@ html {
 	cursor: pointer;
 }
 
-.banner2 h2 {
+.banner2 .t_box {
+	transform: translateX(-100px);
+	opacity: 0;
+	transition: all .6s;
+}
+
+.banner2 .t_box.show {
+	transform: translateX(0px);
+	opacity: 1;
+}
+
+.banner2 .t_box h2 {
 	font-size: 4.5rem;
 	font-family: 'Pretendard-Bold';
 	padding: 80px 0 0 120px;
 }
 
-.banner2 span {
+.banner2 .t_box span {
 	display: block;
 	font-size: 2rem;
 	padding-left: 120px;
 }
 
-.banner2 button {
+.banner2 .t_box button {
 	display: block;
 	font-size: 1.6rem;
 	color: #fff;
@@ -622,7 +622,7 @@ html {
 	transition: all .2s;
 }
 
-.banner2 button:hover {
+.banner2 .t_box button:hover {
 	background: #fff;
 	color: #71BED3;
 }
@@ -1143,8 +1143,8 @@ html {
 	.main_slide .all {width: 83px;}
 	.main_slide .swiper-container2 .swiper-pagination .swiper-pagination-bullet {width: 100px;}
 
-	.banner2 h2, .banner2 span {padding-left: 80px;}
-	.banner2 button {margin-left: 80px;}
+	.banner2 .t_box h2, .banner2 .t_box span {padding-left: 80px;}
+	.banner2 .t_box button {margin-left: 80px;}
 
 	.md_slide .swiper-container3 .swiper-pagination .swiper-pagination-bullet {width: 100px;}
 	.md_slide .all_link {width: 95px;}
@@ -1169,9 +1169,9 @@ html {
 	.main_slide .ms_slide .thumbnail .heart {width: 20px; height: 17px; background-size: 100%;}
 
 	.banner2 {height: 430px; background: url(../img/openBanner_2021b.png) no-repeat center; background-size: cover; text-align: center;}
-	.banner2 h2 {padding-top: 152px;}
-	.banner2 h2, .banner2 span {padding-left: 0;}
-	.banner2 button {display: none;}
+	.banner2 .t_box h2 {padding-top: 152px;}
+	.banner2 .t_box h2, .banner2 .t_box span {padding-left: 0;}
+	.banner2 .t_box button {display: none;}
 
 	.md_slide .mp_slide .thumbnail .heart {width: 20px; height: 17px; background-size: 100%;}
 
@@ -1216,8 +1216,8 @@ html {
 	.main_slide .swiper-container2 .swiper-pagination .swiper-pagination-bullet {width: 65px;}
 
 	.banner2 {height: 300px;}
-	.banner2 h2 {padding-top: 105px; font-size: 30px;}
-	.banner2 span {font-size: 16px;}
+	.banner2 .t_box h2 {padding-top: 105px; font-size: 30px;}
+	.banner2 .t_box span {font-size: 16px;}
 
 	.md_slide .swiper-container3 .swiper-pagination .swiper-pagination-bullet {width: 65px;}
 
