--- a/andbag/css/style.css
+++ b/andbag/css/style.css
@@ -1169,7 +1169,9 @@ html {
 	.main_slide .ms_slide .thumbnail .heart {width: 20px; height: 17px; background-size: 100%;}
 
 	.banner2 {height: 430px; background: url(../img/openBanner_2021b.png) no-repeat center; background-size: cover; text-align: center;}
-	.banner2 .t_box h2 {padding-top: 152px;}
+	.banner2 .t_box {transform: translate(0, -50px);}
+	.banner2 .t_box.show {transform: translate(0, 0);}
+	.banner2 .t_box h2 {padding-top: 160px;}
 	.banner2 .t_box h2, .banner2 .t_box span {padding-left: 0;}
 	.banner2 .t_box button {display: none;}
 
