slide effect edit

--- a/andbag/css/style.css
+++ b/andbag/css/style.css
@@ -400,6 +400,14 @@ html {
 	background-size: cover;
 }
 
+/* .banner1 .swiper-button-prev {
+	
+}
+
+.banner1 .swiper-button-next {
+	
+} */
+
 /* 메인 슬라이드 */
 .main_slide {
     width: 100%;
