--- a/andbag/css/swiper-bundle.css
+++ b/andbag/css/swiper-bundle.css
@@ -246,9 +246,9 @@
 }
 
 :root {
-    /*
-    --swiper-pagination-color: var(--swiper-theme-color);
-    */
+    
+    /* --swiper-pagination-color: var(--swiper-theme-color); */
+   
 }
 
 .swiper-pagination {
