--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,69 @@
 @charset "utf-8";
 
+/* 기본 설정 */
+.container {
+    width: 1200px;
+    margin: 0 auto;
+    background: rgba(0,0,0,0.2);
+}
+
+/* 헤더 */
+header {
+    position: fixed;
+    width: 100%;
+    height: 80px;
+    background: rgba(0,0,0,0.2);
+}
+
+header nav ul li {
+    display: inline-block;
+}
+
+/* 메인 페이지 */
+main {
+    height: 100vh;
+    line-height: 100vh;
+    background: rgb(255, 232, 232);
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.intro {
+    height: 100vh;
+    line-height: 100vh;
+    background: rgb(255, 224, 195);
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.skills {
+    height: 100vh;
+    line-height: 100vh;
+    background: rgb(255, 249, 199);
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.section1 {
+    height: 100vh;
+    line-height: 100vh;
+    background: rgb(228, 253, 208);
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.section2 {
+    height: 100vh;
+    line-height: 100vh;
+    background: rgb(177, 239, 241);
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.section3 {
+    height: 100vh;
+    line-height: 100vh;
+    background: rgb(187, 222, 255);
+    font-size: 2rem;
+    font-weight: bold;
+}
