--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,15 @@
 @charset "utf-8";
 
 /* 기본 설정 */
+html {
+    overflow: hidden;
+}
+
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
 .container {
     width: 1200px;
     margin: 0 auto;
@@ -11,16 +20,23 @@
 header {
     position: fixed;
     width: 100%;
-    height: 80px;
+    height: 70px;
     background: rgba(0,0,0,0.2);
 }
 
-header nav ul li {
+.header_box {
+    height: 70px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header_box nav ul li {
     display: inline-block;
 }
 
 /* 메인 페이지 */
-main {
+#main {
     height: 100vh;
     line-height: 100vh;
     background: rgb(255, 232, 232);
@@ -28,7 +44,7 @@ main {
     font-weight: bold;
 }
 
-.intro {
+#intro {
     height: 100vh;
     line-height: 100vh;
     background: rgb(255, 224, 195);
@@ -36,7 +52,7 @@ main {
     font-weight: bold;
 }
 
-.skills {
+#skills {
     height: 100vh;
     line-height: 100vh;
     background: rgb(255, 249, 199);
@@ -44,7 +60,7 @@ main {
     font-weight: bold;
 }
 
-.section1 {
+#section1 {
     height: 100vh;
     line-height: 100vh;
     background: rgb(228, 253, 208);
@@ -52,7 +68,7 @@ main {
     font-weight: bold;
 }
 
-.section2 {
+#section2 {
     height: 100vh;
     line-height: 100vh;
     background: rgb(177, 239, 241);
@@ -60,10 +76,18 @@ main {
     font-weight: bold;
 }
 
-.section3 {
+#section3 {
     height: 100vh;
     line-height: 100vh;
     background: rgb(187, 222, 255);
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+#connect {
+    height: 100vh;
+    line-height: 100vh;
+    background: rgb(188, 187, 255);
     font-size: 2rem;
     font-weight: bold;
 }
