--- a/css/style.css
+++ b/css/style.css
@@ -6,29 +6,34 @@ html, body {
     height: 100%;
 }
 
-.container {
+/* .container {
     width: 1200px;
     margin: 0 auto;
     background: rgba(0,0,0,0.2);
-}
+} */
 
-/* 헤더 */
-header {
+/* aside */
+aside {
     position: fixed;
-    width: 100%;
-    height: 70px;
-    background: rgba(0,0,0,0.2);
+    top: 0;
+    left: 0;
+    width: 300px;
+    height: 100%;
+    background: #03658C;
 }
 
-.header_box {
-    height: 70px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.aside_box {
+    text-align: center;
 }
 
-.header_box nav ul li {
-    display: inline-block;
+.aside_box nav ul li a {
+    color: #fff;
+}
+
+/* 컨텐츠 */
+.content {
+    height: 100%;
+    padding-left: 300px;
 }
 
 /* 메인 페이지 */
@@ -56,31 +61,22 @@ header {
     font-weight: bold;
 }
 
-#section1 {
+#portfolio {
     height: 100vh;
-    line-height: 100vh;
     background: rgb(228, 253, 208);
     font-size: 2rem;
     font-weight: bold;
 }
 
-#section2 {
+#design {
     height: 100vh;
     line-height: 100vh;
-    background: rgb(177, 239, 241);
+    background: rgb(187, 233, 255);
     font-size: 2rem;
     font-weight: bold;
 }
 
-#section3 {
-    height: 100vh;
-    line-height: 100vh;
-    background: rgb(187, 222, 255);
-    font-size: 2rem;
-    font-weight: bold;
-}
-
-#connect {
+#contact {
     height: 100vh;
     line-height: 100vh;
     background: rgb(188, 187, 255);
@@ -89,7 +85,6 @@ header {
 }
 
 /* 반응형 */
-@media (max-width: 1200px) {
-    html {overflow: auto;}
-    .container {width: 100%;}
-}
+/* @media (max-width: 1200px) {
+    
+} */
