--- a/css/style.css
+++ b/css/style.css
@@ -156,16 +156,19 @@ aside .row {
 
 #main .emoji {
     position: absolute;
+    width: 70px;
+    height: 70px;
+    background: url(../img/woman_technologist.png) no-repeat center;
+    background-size: cover;
     top: 25%;
     left: 50%;
     transform: translate(-50%, -50%);
     animation: motion 0.6s linear 0s infinite alternate;
-    font-size: 3rem;
 }
 
 @keyframes motion {
     0% {top: 25%;}
-    100% {top: 26%;}
+    100% {top: 27%;}
 }
 
 #main .text_box {
@@ -179,7 +182,7 @@ aside .row {
 #main .text_box p {
     text-align: center;
     margin-bottom: 10px;
-    font-size: 55px;
+    font-size: 50px;
     color: #707070;
     /* display: none; */
 }
