모바일 메뉴 반응형

--- a/css/style.css
+++ b/css/style.css
@@ -64,40 +64,40 @@ aside .row {
     left: 4px;
 }
 
-.aside_box nav ul li {
+nav ul li {
     position: relative;
     margin-bottom: 25px;
 }
 
-.aside_box nav ul li a {
+nav ul li a {
     display: block;
     font-weight: 500;
     color: #fff;
     transition: text-shadow .2s ease-in-out;
 }
 
-.aside_box nav ul li a.icon {
+nav ul li a.icon {
     display: none;
 }
 
-.aside_box nav ul li.active a {
+nav ul li.active a {
     text-shadow: 3px 3px #D9471A;
 }
 
-.aside_box nav ul li:hover a {
+nav ul li:hover a {
     text-shadow: 3px 3px #D9471A;
 }
 
-.aside_box .mode_switch {
+.mode_switch {
     margin-top: 40px;
 }
 
-.aside_box .mode_switch .mode_tit {
+.mode_switch .mode_tit {
     margin-right: 10px;
     color: #fff;
 }
 
-.aside_box .mode_switch .dark_mode {
+.mode_switch .dark_mode {
     position: relative;
     display: inline-block;
     width: 55px;
@@ -105,7 +105,7 @@ aside .row {
     top: -4px;
 }
 
-.aside_box .mode_switch .dark_mode input {
+.mode_switch .dark_mode input {
     opacity: 0;
     width: 0;
     height: 0;
@@ -113,6 +113,8 @@ aside .row {
 
 .onoff_switch {
     position: absolute;
+    width: 55px;
+    height: 30px;
     cursor: pointer;
     top: 0;
     left: 0;
@@ -146,6 +148,95 @@ aside .row {
     background: url(../img/moon.png) no-repeat center;
     background-size: 18px;
     background-color: #fff;
+}
+
+.mBtn {
+    position: relative;
+    width: 30px;
+    height: 21px;
+    display: none;
+}
+
+.mBtn a {
+    width: 100%;
+    height: 100%;
+}
+
+.mBtn a span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 3px;
+    background-color: #fff;
+    z-index: 21;
+    transition: all .3s ease-in-out;
+}
+
+.mBtn span:nth-child(2) {
+    top: 9px;
+}
+
+.mBtn span:nth-child(3) {
+    top: unset;
+    bottom: 0;
+}
+
+.mBtn.on a span:nth-child(1) {
+    transform: translateY(10px) rotate(-45deg);
+}
+
+.mBtn.on a span:nth-child(2) {
+    opacity: 0;
+}
+
+.mBtn.on a span:nth-child(3) {
+    transform: translateY(-8px) rotate(45deg);
+}
+
+.m_menu {
+    position: fixed;
+    top: 0;
+    right: -60%;
+    width: 60%;
+    height: 100%;
+    background-color: #03658C;
+    padding-top: 100px;
+    text-align: center;
+    z-index: 20;
+    transition: all .3s ease-in-out;
+}
+
+.m_menu.on {
+    right: 0;
+}
+
+.m_menu nav {
+    margin-bottom: 80px;
+}
+
+.m_menu nav ul {
+    width: 150px;
+    margin: 0 auto;
+}
+
+.m_menu nav ul li {
+    margin-bottom: 30px;
+}
+
+.m_back {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+    z-index: 19;
+    display: none;
+}
+
+.m_back.on {
+    display: block;
 }
 
 /* 컨텐츠 */
@@ -317,17 +408,30 @@ aside .row {
     .aside_box h1 {margin: 0;}
     .aside_box h1 a.pc_logo {display: none;}
     .aside_box h1 a.m_logo {display: block; font-size: 35px;}
+    .aside_box .pc_menu {display: none;}
     .aside_box nav ul li {display: inline-block; margin-bottom: 0;}
     .aside_box nav ul li a.text {display: none;}
     .aside_box nav ul li a.icon {display: block; margin-right: 30px;}
+    .aside_box .pc_switch {display: none;}
     .aside_box .mode_switch {margin-top: 0;}
     .aside_box .mode_switch .mode_tit {display: none;}
     .aside_box .mode_switch .dark_mode {top: 0;}
+    .mBtn {display: block;}
 
     .content {padding-left: 0;}
 }
 
 @media (max-width: 840px) {
-    .aside_box h1 a.m_logo {font-size: 28px;}
-    .aside_box nav ul li a.icon {margin-right: 20px;}
+    
+}
+
+@media (max-width: 600px) {
+    aside, .aside_box {height: 70px;}
+    .aside_box h1 a.m_logo {font-size: 30px;}
+}
+
+@media (max-width: 400px) {
+    aside, .aside_box {height: 60px;}
+    .aside_box h1 a.m_logo {font-size: 24px;}
+    .mBtn {width: 25px;}
 }
