--- a/css/style.css
+++ b/css/style.css
@@ -299,6 +299,7 @@ nav ul li:hover a {
 }
 
 #main .text_box .line {
+    font-size: 50px;
     font-weight: 100;
     animation: line .3s infinite;
 }
