--- a/css/reset.css
+++ b/css/reset.css
@@ -52,3 +52,5 @@ img {width: 100%;}
 .mt40 {margin-top: 40px !important;}
 .mt45 {margin-top: 45px !important;}
 .mt50 {margin-top: 50px !important;}
+
+.mtb90 {margin: 90px 0;}
